--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "db": "json-server --watch db/db.json",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
@@ -21,6 +22,10 @@
     "@angular/platform-browser": "^5.1.0",
     "@angular/platform-browser-dynamic": "^5.1.0",
     "@angular/router": "^5.1.0",
+    "@ngrx/effects": "^5.1.0",
+    "@ngrx/entity": "^5.1.0",
+    "@ngrx/router-store": "^5.0.1",
+    "@ngrx/store": "^5.1.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
@@ -29,6 +34,7 @@
     "@angular/cli": "1.6.5",
     "@angular/compiler-cli": "^5.1.0",
     "@angular/language-service": "^5.1.0",
+    "@ngrx/store-devtools": "^5.1.0",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
